src/test/deca/context/valid/SansObjet/DeclVar-Greater-boolean-float-float.deca
// Description:
//    Declaration of a boolean variable using > operation between a float variable and float .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  0.1; 
    float y = 10.01; 
    boolean z = 0.1 > 10.01; 
}
